boards and blocks
Сделал нормальные формы, теперь можно не только файлы добавлять,
но и коментарии. И посмотреть что внутре.

--- a/_engine/classes/ajaxform/view/css/ajaxform_edit.css
+++ b/_engine/classes/ajaxform/view/css/ajaxform_edit.css
@@ -10,3 +10,9 @@ td.hidden {
 .nobreak {
     white-space:nowrap;
 }
+
+.readonly {
+    background-color: gray;
+    color: white;
+    font-weight: bold;
+}
