--- a/_engine/classes/console/view/css/mysql.css
+++ b/_engine/classes/console/view/css/mysql.css
@@ -6,7 +6,7 @@
 
 pre.mysql	{ 
     border: 0px !important; 
-    font: 11px "Tahoma", Sans-Serif; 
+    font: 1.1em "Tahoma", Sans-Serif; 
     margin: 0px !important; 
     padding: 0px !important; 
     background: transparent 
