--- a/_engine/classes/Auth/view/css/auth.css
+++ b/_engine/classes/Auth/view/css/auth.css
@@ -6,9 +6,17 @@
         Purpose of the stylesheet follows.
 */
 
+body {
+    font-size: 13px;
+}
+
+table {
+    font-size: 1em;
+}
+
 .zag {  
     font-family: Verdana, Arial, Helvetica, sans-serif; 
-    font-size: 12pt; 
+    font-size: 1.2em; 
     font-weight: bold; 
     color: #000000;
     width:100%;
@@ -17,14 +25,14 @@
 
 .tekst {  
     font-family: Arial, Helvetica, sans-serif; 
-    font-size: 10pt;
+    font-size: 1em;
     color: #000000;
     vertical-align: middle;
     text-align: center;
 }
 .podtekst {  
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 6pt;
+    font-size: 0.6em;
     color: red;
     text-align:left
 }
