--- a/_engine/classes/menu/view/css/menu.css
+++ b/_engine/classes/menu/view/css/menu.css
@@ -36,9 +36,10 @@ a.menu-item {
     padding:0px;
 }
 
-.menutext {
-    margin-left:3px;
-    margin-right:3px;
+div.menutext {
+    overflow: hidden;
+    padding-left:3px;
+    padding-right:3px;
 }
 
 .menu-item-sel {
