--- a/classes/firstlevel/view/css/style.css
+++ b/classes/firstlevel/view/css/style.css
@@ -1,23 +1,24 @@
+/* My styles */
 html {
     height:100%;
+    font-size: 13px;
 }
 
 body {
     margin: 0;
     padding: 0;
     min-height:100%;
-    font-size: 10pt;
+    font-size: 13px; /* метод yahoo */
+    font-family: "Times",serif;
+}
+input,select {
+    font-size: 0.8em;
 }
 
 .glavmenu {
     text-align: center;
     vertical-align:middle;
     background-color: rgb(172, 194, 172);
-    /*height: 20px;*/
-    font-family: 'Arial', sans-serif;
-    font-size: 1.1em;
-    cursor: auto;
-    text-decoration:none;
     color:black;
 }
 
