--- a/_engine/classes/menu/view/css/menu.css
+++ b/_engine/classes/menu/view/css/menu.css
@@ -28,6 +28,8 @@
     background-image: url(img/cp.png);
     background-position:center center;
     background-repeat:no-repeat;
+    /*background-color: silver;*/
+    border-radius: 8px;
 }
 
 a.menu-item {
