--- a/classes/firstlevel/view/css/style.css
+++ b/classes/firstlevel/view/css/style.css
@@ -34,6 +34,8 @@ div.glavmenu {
     background-image: url(img/domik.gif);
     background-repeat: no-repeat;
     background-position: left;
+    
+    border-radius: 8px;
 }
 
 #maindiv {
