--- a/_engine/classes/ajaxform/view/css/ajaxform.css
+++ b/_engine/classes/ajaxform/view/css/ajaxform.css
@@ -7,15 +7,15 @@
 */
 
 .Form_errorText {
-    
+    color:red;
 }
 
 .Form_error {
-    
+    color:red;
 }
 
 .Form_errorField {
-    
+    color:red;
 }
 
 .Form_disabled {
