--- a/_engine/classes/sqltable/view/css/style.css
+++ b/_engine/classes/sqltable/view/css/style.css
@@ -125,3 +125,10 @@ a.filelink {
 p {
     margin: 0.2em;
 }
+
+#verticalText {
+    -moz-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    writing-mode: tb-rl;
+}
