--- a/_engine/classes/JsCSS/view/css/style.css
+++ b/_engine/classes/JsCSS/view/css/style.css
@@ -126,5 +126,6 @@ button {  width: auto; overflow: visible; }
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3{ page-break-after: avoid; }
   header, footer { display:none;}
+  .noprint { display:none;}
 }
 
