autoload and PDO
Собственно изменена система автозагрузки
классов и поменяно обращение к базе со старого mysql на современный PDO
+ еще куча добавлений, потому как давно не коммитил

--- a/_engine/classes/sqltable/view/css/style.css
+++ b/_engine/classes/sqltable/view/css/style.css
@@ -139,3 +139,11 @@ p {
     -o-transform: rotate(90deg);
     writing-mode: tb-rl;
 }
+
+#calcbutton {
+    display:inline-block; 
+    border:0; 
+    margin:0;
+    font-size:12px;
+    font-family: 'trebuchet ms', tahoma, arial, sans-serif; 
+}
