--- a/_engine/classes/sqltable/view/css/comments.css
+++ b/_engine/classes/sqltable/view/css/comments.css
@@ -6,16 +6,23 @@
         Purpose of the stylesheet follows.
 */
 
+.comments {
+    margin-top: 10px;
+}
+
 .showcomment {
+    display: block;
+    clear:both;
     min-width: 200px;
     background-color: #cccccc;
     font-size:1.3em;
     text-align: center;
-    cursor: url;
+    cursor:pointer;
     font-weight: bold;
     margin: 5px;
     padding: 3px;
 }
+
 div.coment {
     font-size:1em;
     padding-bottom: 5px;
@@ -39,15 +46,27 @@ div.coment {
 
 }
 
-div.comments textarea {
-/*    width: 90%;*/
-    height: 50px;
-    margin-top: 5px;
-    float:left;
+form#addcomment {
+    min-width: 250px;
+    width: 100%;
+    min-height: 100px;
+    position: relative;
+}
+
+.comments textarea {
+    min-width: 175px;
+    width: 90%;
+    height: 80px;
+    position: absolute;
+    right: 21px;
+    top:5px;
 }
 
 #sendcomment {
     width: 20px;
-    height: 50px;
+    height: 85px;
+    position: absolute;
+    right: 0;
+    top:5px;
     /*margin-top: -18%;*/
 }
