--- a/_engine/classes/JsCSS/view/css/jquery.ui.chosen.css
+++ b/_engine/classes/JsCSS/view/css/jquery.ui.chosen.css
@@ -133,7 +133,7 @@ div.chzn-container div.chzn-search input {
   background: url('images/chosen-sprite.png') no-repeat 97% -35px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
   background: url('images/chosen-sprite.png') no-repeat 97% -35px, -ms-linear-gradient(top, #ffffff 85%,#eeeeee 99%);
   background: url('images/chosen-sprite.png') no-repeat 97% -35px, -ms-linear-gradient(top, #ffffff 85%,#eeeeee 99%);
-  background: linear-gradient(top, #ffffff 85%,#eeeeee 99%)
+  background: linear-gradient(top, #ffffff 85%,#eeeeee 99%);
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
   -o-border-radius: 0px;
