--- a/_engine/classes/sqltable/view/css/style.css
+++ b/_engine/classes/sqltable/view/css/style.css
@@ -26,6 +26,10 @@ div.fullwidth .filelink {
     font-size:1em;
 }
 
+.nullwidth {
+    display: none;
+}
+
 .chettr {
     background-color: rgb(250, 250, 250);
 }
