--- a/_engine/classes/sqltable/view/css/sqltable-style.css
+++ b/_engine/classes/sqltable/view/css/sqltable-style.css
@@ -169,3 +169,19 @@ a.printlink {
     background-position: 50% 50%;
     padding: 8px;
 }
+
+#copytablebutton {
+    position: absolute;
+    right: 0;
+    margin-top: 1px;
+    width: 27px;
+    height: 27px;
+    background: url(img/b_excel.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+div#buttons {
+    float:right;
+    width: 100%;
+}
