fix print links
boilerplate css print href on links, i do not need that.

--- a/classes/firstlevel/view/css/style.css
+++ b/classes/firstlevel/view/css/style.css
@@ -50,3 +50,14 @@ div.glavmenu {
     font-size: 1em;
 }
 
+@media print {
+    header { display:none; }
+    footer { display:none; }
+    a,
+    a:visited {
+        text-decoration: none;
+    }
+    a[href]:after {
+        content: "";
+    }
+}
