fix table width and focus to find on symbols

--- a/_engine/classes/sqltable/view/css/sqltable-style.css
+++ b/_engine/classes/sqltable/view/css/sqltable-style.css
@@ -67,6 +67,9 @@ div.fullwidth .filelink {
     padding:0px;
     padding-left: 5px;
     padding-right: 5px;
+    /* некоторые яцейки изза длинных названий заставляют таблицу выходить за экран*/
+    overflow:hidden;
+    max-width: 350px; /* экспериментальное значение '*/
 }
 
 .listtable td.search, .listtable td.buttons {
